--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-modal": "^3.16.3",
     "axios": "^1.6.8",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
